# cmake-deb-packaging

./: README.md  deb_packaging.cmake
examples/multiple-packages/: CMakeLists.txt
examples/multiple-packages/debian/: conffiles
examples/single-package/: CMakeLists.txt
examples/single-package/debian/: conffiles  postinst
